tests/NormalTests/paczka1/small_fuzzy/68979006.err
Error in line 6: vORB0eLD0 S495 6,2
Error in line 3: rx3Rgu8HNX S495 77,9
Error in line 7: vORB0eLD0 S261 58,6
Error in line 13: wme7jsC7c S261 35,3
